# entity_resolution

./: .gitignore  README.md  pyproject.toml
entity_resolution/: er_classifier.py  er_features.py  grantee_nearest_neighbor_index.py  merged_data.py
entity_resolution/readers/: articles_reader.py  grants_reader.py
entity_resolution/sql/: create_tables.sql
scripts/: run_er.py  train_test_er.py
